Add opencv, add heads to sources, start colours

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,17 +2,27 @@ set(exe_name "adaptor")
 
 set(sources
     colours.cpp
+    colours.hpp
     main.cpp
     screen.cpp
+    screen.hpp
     transforms.cpp
+    transforms.hpp
     webcam.cpp
+    webcam.hpp
     )
+
+find_package(OpenCV)
 
 set(inc_dirs
     ${inc_dirs}
     )
 set(link_dirs
     ${link_dirs}
+    )
+set(libs
+    ${libs}
+    ${OpenCV_LIBS}
     )
 
 include_directories(${inc_dirs})
