Add project to CMakeLists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ set(sources
     colours.cpp
     colours.hpp
     main.cpp
+    project.cpp
+    project.hpp
     screen.cpp
     screen.hpp
     transforms.cpp
