Fix typos, add screen-windows to CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ set(sources
     project.hpp
     screen.cpp
     screen.hpp
+    screen-windows.cpp
+    screen-windows.hpp
     transforms.cpp
     transforms.hpp
     utils.cpp
